# CS2-Tools-By-Jonny

./: .gitignore  LICENSE  LICENSE.md  README.md  index.html  msix-packaging.js  neutralino.config.json  package-lock.json  package.json  pnpm-lock.yaml  power_plans.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/instructions/: styling.instructions.md  svelte.instructions.md
.github/workflow/: release.yml
build-tools/: copy-binaries.js  msix-packaging.js
build-tools/msix-packaging/: AppxManifest.xml
dev/Logo 1/: 1_Vector_Ai.ai
dev/Logo 2/: 2_Vector_Ai.ai
dev/Logo 3/: 3_Vector_Ai.af  3_Vector_Ai.ai
dev/Logo 4/: 4_Vector_Ai.ai
msix-packaging/: AppxManifest.xml
src/: App.svelte  App.vue  app.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  test3.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cpu_parking.rs  cs2monitoring.rs  gsi.rs  lib.rs  monitor.rs  power.rs  processes.rs  vibrance.rs
src/components/: About.vue  CpuAffinity.svelte  CpuAffinity.vue  CpuCoreManagement.vue  Dashboard.svelte  Dashboard.test.ts  Dashboard.vue  GSI.vue  NvidiaVibrance.svelte  NvidiaVibrance.test.ts  NvidiaVibrance.vue  PowerPlanManagement.svelte  PowerPlanManagement.vue  ProcessList.svelte  ProcessList.vue  ProcessManagement.svelte  ProcessManagement.vue  Settings.svelte  Settings.vue  Sidebar.svelte  Sidebar.vue
src/elements/: Button.svelte  Button.vue  Card.svelte  Card.vue  ContentBox.svelte  ContentBox.vue  HelpCard.vue  Toggle.vue  (+3 more)
(+26 files in other folders)
