[package]
name = "CS2ToolsByJonny"
version = "2.0.1"
description = "Maximize your competitive edge in Counter-Strike 2 with intelligent system optimization"
authors = ["Code-Jonny"]
license = "MIT"
repository = "https://github.com/Code-Jonny/CS2-Tools-By-Jonny"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
sysinfo = "0.36.1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-store = "2.4.1"
nvapi = "0.1.4"
anyhow = "1.0.100"
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "winnt", "handleapi", "winbase", "basetsd"] }
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tokio = { version = "1.52.1", features = ["full"] }
axum = "0.8.4"
rodio = { version = "0.21.1", features = ["symphonia-mp3", "symphonia-wav"] }
winreg = "0.56.0"
steamlocate = "2.1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
